implemented function to fetch parcels within polygon and export csv file.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "esri": "^0.0.1-security",
     "eventsource-parser": "^0.1.0",
     "openai": "^3.2.1",
+    "papaparse": "^5.4.1",
     "primereact": "^10.0.9",
     "proj4": "^2.9.2",
     "react": "^18.2.0",
@@ -53,6 +54,7 @@
     "@types/auth0": "^3.3.9",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.64",
+    "@types/papaparse": "^5.3.14",
     "@types/proj4": "^2.5.5",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
