--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eventsource-parser": "^0.1.0",
     "openai": "^3.2.1",
     "papaparse": "^5.4.1",
+    "primeicons": "^7.0.0",
     "primereact": "^10.0.9",
     "proj4": "^2.9.2",
     "react": "^18.2.0",
